--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="bici"></div>
+
+
+
     <script src="js/script.js"></script>
 </body>
 </html>
